Update docs and fix some format to release 0.0.3 (#18)
* chore: update to `templatia` v0.0.3 with enriched error handling and internal refactoring

- Bump dependency version to `templatia` v0.0.3 in examples and documentation
- Enhance error handling through compile-fail tests for clearer diagnostics
- Perform internal refactoring to prepare for future features
- Refactor code and tests for consistency and readability across modules

* refactor: replace inline float values with constants and simplify boolean assertions in tests

- Use `std::f32::consts::PI` and `std::f64::consts::PI` for float constants in tests
- Replace explicit `assert_eq` for booleans with `assert!` for cleaner assertions

* fix: correct `FieldKind::HashSet` display typo and improve formatting in `fields.rs`

- Fix typo in `FieldKind::HashSet` display implementation (`HashMap` -> `HashSet`)
- Improve code formatting for better readability and consistency in match arms

* chore: update CI workflow and improve documentation formatting

- Add condition to skip workflows (`fmt`, `tests`, `doc`) for non-feature branches
- Standardize parameter and error formatting in `templatia` documentation for consistency

* docs: update templatia error documentation and simplify CI condition

- Rename "Variants" to "Fields" in templatia error documentation for clarity
- Remove redundant `if` condition from GitHub Actions CI workflow

* docs: add contribution, issue, and security documentation; update CI configuration

- Introduce CONTRIBUTING.md to guide contributors
- Add ISSUE_TEMPLATE for bug reports, feature requests, and questions
- Include SECURITY.md detailing supported versions and vulnerability handling
- Update CI workflow for efficiency by consolidating cache steps with `rust-cache` and enabling concurrency control

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,13 @@
-name: ci.yml
+name: CI
 on:
   pull_request:
     branches:
       - main
       - develop
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.head.ref || github.ref }}
+  cancel-in-progress: true
 
 env:
   CARGO_TERM_COLOR: always
@@ -21,23 +25,8 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Cache cargo registry
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Cache cargo index
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Cache target directory
-        uses: actions/cache@v4
-        with:
-          path: target
-          key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
+      - name: Rust cache
+        uses: Swatinem/rust-cache@v2
 
       - name: Run tests
         run: cargo test --verbose
@@ -45,6 +34,7 @@ jobs:
   fmt:
     name: Rustfmt
     runs-on: ubuntu-latest
+    if: github.base_ref != 'develop'
     steps:
       - uses: actions/checkout@v4
 
@@ -58,10 +48,7 @@ jobs:
 
   clippy:
     name: Clippy
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
@@ -70,23 +57,8 @@ jobs:
         with:
           components: clippy
 
-      - name: Cache cargo registry
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Cache cargo index
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Cache target directory
-        uses: actions/cache@v4
-        with:
-          path: target
-          key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
+      - name: Rust cache
+        uses: Swatinem/rust-cache@v2
 
       - name: Run clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
@@ -94,29 +66,15 @@ jobs:
   doc:
     name: Documentation
     runs-on: ubuntu-latest
+    if: github.base_ref != 'develop'
     steps:
       - uses: actions/checkout@v4
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Cache cargo registry
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Cache cargo index
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Cache target directory
-        uses: actions/cache@v4
-        with:
-          path: target
-          key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
+      - name: Rust cache
+        uses: Swatinem/rust-cache@v2
 
       - name: Check documentation
         run: cargo doc --no-deps --document-private-items
